objects/Relationship_Type__c.object
<CustomObject>
    <fields>
        <fullName>Contacts_List__c</fullName>
        <formula>HYPERLINK(&apos;/00OC0000004vgn0?pv0=&apos;&amp;Name&amp;&apos;&amp;pv1=&apos;&amp;Name, &quot;Individuals Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contacts List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_type_long_SF_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Relationship type long SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceRTId__c</fullName>
        <description>Relationship Type&apos;s unique Salesforce Id</description>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Relationship Type&apos;s unique Salesforce Id</inlineHelpText>
        <label>SalesforceRTId</label>
        <type>Text</type>
    </fields>
    <label>Relationship Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Contacts_List__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Relationship Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>